// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/galaxy-collection/index getReleases processes real data 1`] = `
Object {
  "registryUrl": "https://galaxy.ansible.com/",
  "releases": Array [
    Object {
      "dependencies": Object {},
      "downloadUrl": "https://galaxy.ansible.com/download/community-kubernetes-0.11.1.tar.gz",
      "isDeprecated": false,
      "newDigest": "cd197084b32f8976394f269eb005bf475eff2122fddbb48380c76154ab4d4530",
      "version": "0.11.1",
    },
    Object {
      "dependencies": Object {},
      "downloadUrl": "https://galaxy.ansible.com/download/community-kubernetes-1.2.0.tar.gz",
      "isDeprecated": false,
      "newDigest": "a53eaf6a51987d30cc48ebcd20f0102dae0f17a7a02071928381e5a62951a0ed",
      "version": "1.2.0",
    },
    Object {
      "dependencies": Object {},
      "downloadUrl": "https://galaxy.ansible.com/download/community-kubernetes-1.2.1.tar.gz",
      "isDeprecated": false,
      "newDigest": "38e064bb32ee86781f0c6e56bd29fcfbaf48180f993e129185eb8420caabf223",
      "version": "1.2.1",
    },
  ],
  "sourceUrl": "https://github.com/ansible-collections/community.kubernetes",
  "tags": Array [
    "kubernetes",
    "k8s",
    "cloud",
    "infrastructure",
    "openshift",
    "okd",
    "cluster",
  ],
}
`;

exports[`datasource/galaxy-collection/index getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/1.2.1/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/1.2.0/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/0.11.1/",
  },
]
`;

exports[`datasource/galaxy-collection/index getReleases returns null for 404 result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/foo/bar/",
  },
]
`;

exports[`datasource/galaxy-collection/index getReleases returns null for empty lookup 1`] = `Array []`;

exports[`datasource/galaxy-collection/index getReleases returns null for null lookupName  1`] = `Array []`;

exports[`datasource/galaxy-collection/index getReleases returns null for remote host error 1`] = `[Error: external-host-error]`;

exports[`datasource/galaxy-collection/index getReleases returns null for remote host error 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/foo/bar/",
  },
]
`;

exports[`datasource/galaxy-collection/index getReleases returns null for unexpected data at base 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/",
  },
]
`;

exports[`datasource/galaxy-collection/index getReleases returns null for unexpected data at versions 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/",
  },
]
`;

exports[`datasource/galaxy-collection/index getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/foo/bar/",
  },
]
`;

exports[`datasource/galaxy-collection/index getReleases returns only valid versions if a version detail fails 1`] = `
Object {
  "registryUrl": "https://galaxy.ansible.com/",
  "releases": Array [
    Object {
      "dependencies": Object {},
      "downloadUrl": "https://galaxy.ansible.com/download/community-kubernetes-0.11.1.tar.gz",
      "isDeprecated": false,
      "newDigest": "cd197084b32f8976394f269eb005bf475eff2122fddbb48380c76154ab4d4530",
      "version": "0.11.1",
    },
    Object {
      "dependencies": Object {},
      "downloadUrl": "https://galaxy.ansible.com/download/community-kubernetes-1.2.0.tar.gz",
      "isDeprecated": false,
      "newDigest": "a53eaf6a51987d30cc48ebcd20f0102dae0f17a7a02071928381e5a62951a0ed",
      "version": "1.2.0",
    },
  ],
}
`;

exports[`datasource/galaxy-collection/index getReleases returns only valid versions if a version detail fails 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/1.2.1/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/1.2.0/",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "galaxy.ansible.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://galaxy.ansible.com/api/v2/collections/community/kubernetes/versions/0.11.1/",
  },
]
`;
